src/objects/testInCountry1__ACMN_Error_Log__c.object
<CustomObject>
    <description>Used to store error logs outside of debug</description>
    <fields>
        <fullName>testInCountry1__Class_Name__c</fullName>
        <description>Stores the Apex Class name if applicable</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Error_Message__c</fullName>
        <description>Stores the error message and/or stack trace</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Log_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Exact date time the error occurred</description>
        <label>Log Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Other_Details__c</fullName>
        <description>Store any additional information if applicable.  Examples: Detailed stack trace, API Endpoint URI, etc.</description>
        <label>Other Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Running_User__c</fullName>
        <description>Salesforce ID of the running user that triggered the error.</description>
        <inlineHelpText>Salesforce ID of the running user that triggered the error.</inlineHelpText>
        <label>Running User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__StackTraceString__c</fullName>
        <description>Store stacktrace if error logger processed an exception.</description>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>ACMN Error Log</label>
    <listViews>
        <fullName>testInCountry1__All</fullName>
        <columns>NAME</columns>
        <columns>testInCountry1__Error_Message__c</columns>
        <columns>testInCountry1__Log_Date_Time__c</columns>
        <columns>testInCountry1__StackTraceString__c</columns>
        <columns>testInCountry1__Other_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>err-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACMN Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>testInCountry1__Error_Message_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( testInCountry1__Error_Message__c )</errorConditionFormula>
        <errorDisplayField>testInCountry1__Error_Message__c</errorDisplayField>
        <errorMessage>The Error Message required</errorMessage>
    </validationRules>
</CustomObject>